--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
 	<title>Something</title>
+    <meta charset="utf-8">
 	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <h1 class="js-title title">My First JS</h1>
     <div class="js-clock">
         <h1>00:00</h1>
     </div>
@@ -14,8 +16,16 @@
         <input type="text" placeholder="What is your name?">
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+        <input type="text" placeholder="Write a to do">
+    </form>
+    <ul class="js-toDoList">
+
+    </ul>
+    <script src="index.js"></script>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
+    <script src="todo.js"></script>
 </body>
 
 </html>
