Finish Momentum clone coding

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 
-<body>
-    <h1 class="js-title title">My First JS</h1>
-    <div class="js-clock">
+<body class="container">
+    <div class="js-title title">
+        Hello World!
+    </div>
+    <div class="js-clock clock">
         <h1>00:00</h1>
     </div>
     <form class="js-form form">
@@ -19,14 +21,15 @@
     <form class="js-toDoForm">
         <input type="text" placeholder="Write a to do">
     </form>
-    <ul class="js-toDoList">
-
+    <ul class="js-toDoList todolist">
     </ul>
+    <span class="js-weather"></span>
     <script src="index.js"></script>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
     <script src="bg.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 </html>
